# garag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  WORKFLOW.md  docker-compose.yml  llm_course_final_task_a.md  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  schemas.py
app/guardrails/: __init__.py  granite.py
app/rag/: __init__.py  embedder.py  fusion.py  generator.py  judge.py  pipeline.py  query_pipeline.py  reranker.py  retriever_dense.py  retriever_sparse.py
app/symphony/: __init__.py  agent.py  config.py  errors.py  models.py  orchestrator.py  tracker.py  workflow.py  workspace.py
data/golden/: golden_set_v1.jsonl
docs/: design.md  roadmap.md  roadmap_to_poxekbook.md  symphony.md
docs/plans/: abstract-popping-breeze.md
evaluation/reports/: generation_report.md  generator_smoke.md  nfr_report.md  retrieval_report.md
experiments/: 00_data_overview.ipynb  01_chunking_choice.ipynb  02_indexing_and_hnsw.ipynb  03_retrieval_tuning.ipynb  04_generation_params.ipynb
monitoring/grafana/provisioning/dashboards/: garag.yml
monitoring/prometheus/: prometheus.yml
scripts/: build_bm25.py  build_golden.py  build_qdrant.py  chunk_corpus.py  eval_generation.py  eval_retrieval.py  fetch_hackerone_reports.py  fetch_man_pages.py  fetch_mitre_atlas.py  fetch_mitre_attack.py  fetch_owasp_top10.py  nfr_benchmark.py  parse_sources.py  run_garak.py  run_symphony.sh  run_vllm_glm47_flash.sh  symphony.py  tune_bm25.py  tune_fusion.py  tune_gen_params.py  validate_generator.py
scripts/parsers/: __init__.py  hackerone.py  man_pages.py  mitre_atlas.py  mitre_attack.py  owasp.py
tests/: test_bm25_tokenize.py  test_embedder.py  test_fusion.py  test_garak_runner.py  test_generator.py  test_guardrails.py  test_judge.py  test_main.py  test_mitre_attack_parser.py  test_nfr_benchmark.py  test_pipeline.py  test_query_pipeline.py  test_schemas.py  test_smoke.py  test_symphony_orchestrator.py  test_symphony_tracker.py  test_symphony_workflow_config.py  test_symphony_workspace.py
