[project]
name = "garag"
version = "0.1.0"
description = "Hybrid RAG over cybersecurity corpus (MITRE ATT&CK/ATLAS, OWASP, HackerOne, man pages) — MVP for GigaSchool LLM-Engineer final"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "poxek" }]

dependencies = [
    "qdrant-client>=1.11",
    "FlagEmbedding>=1.3.4",
    "sentence-transformers>=3.1",
    "rank-bm25>=0.2.2",
    "chonkie>=0.4.0",
    "tiktoken>=0.7",
    "transformers>=4.45",
    "torch>=2.4",
    "httpx>=0.27",
    "stix2>=3.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "pandas>=2.2",
    "pyarrow>=17",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "gradio>=4.44",
    "prometheus-client>=0.21",
    "structlog>=24.4",
    "pytrec-eval-terrier>=0.5.7",
    "tqdm>=4.66",
    "llm-guard>=0.3.15",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.1a10",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]
security = [
    "garak>=0.10",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ARG", "RUF"]

[tool.ty]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
