[project]
name = "garag"
version = "0.1.0"
description = "Hybrid RAG over cybersecurity corpus (MITRE ATT&CK/ATLAS, OWASP, HackerOne, man pages) — MVP for GigaSchool LLM-Engineer final"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "poxek" }]

dependencies = [
    "qdrant-client>=1.11",
    "FlagEmbedding>=1.3.4",
    "sentence-transformers>=3.1",
    "rank-bm25>=0.2.2",
    "chonkie>=0.4.0",
    "tiktoken>=0.7",
    "transformers>=4.45",
    "torch>=2.4",
    "httpx>=0.27",
    "stix2>=3.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "pandas>=2.2",
    "pyarrow>=17",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "gradio>=4.44",
    "prometheus-client>=0.21",
    "structlog>=24.4",
    "pytrec-eval-terrier>=0.5.7",
    "tqdm>=4.66",
    "llm-guard>=0.3.15",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "ty>=0.0.1a10",
    "pytest>=8",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pytest-cov>=7.1.0",
]
security = [
    "garak>=0.10",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle — not enforcing docstring style in a learning project
    "COM812", # missing trailing comma — conflicts with formatter
    "ISC001", # single-line implicit string concat — conflicts with formatter
    "ANN401", # Any in type annotations — used deliberately in metadata dicts
    "FIX",    # TODO/FIXME markers are fine in an MVP
    "TD",     # ditto
    "T201",   # print() is fine in CLI fetch scripts
    "S101",   # assert statements are fine in tests and notebooks
    "PLR2004", # magic numbers are fine in experiments and scripts
    "ERA001", # commented-out code detector — too noisy in scaffolding
    "BLE001", # blind except in scripts is acceptable (logged)
    "EM101", "EM102", # exception message formatting — noise for simple scripts
    "TRY003", # long messages in exceptions — same
    "G004",   # f-string in log messages — structlog handles it
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S", "PLR", "SLF001", "ANN", "ARG", "PLC0415"]
"scripts/*" = ["INP001"]  # implicit namespace packages are fine

[tool.ruff.lint.pylint]
max-args = 7

[tool.ty.environment]
python-version = "3.12"

[tool.ty.terminal]
error-on-warning = true

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
]
